pages/index.css
.main {
  /* background-color: var(--color-purple); */
  padding-inline: var(--size-md);
  padding-block: var(--size-3xl);
  /* border: 2px red solid; */
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
}
.bannerBox {
  /* border: solid red 3px; */
  width: 100%;
  height: 300px;
  background-image: url("~/assets/HomepageBanner.jpg");
  background-size: cover;
  position: relative;
}
.homepageLogo {
  height: 280px;
  filter: brightness(0) invert(1);
  position: absolute;
  top: 0;
  margin-top: 80px;
}
.welcomeMSG {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
}
.test {
  width: 100%;
  height: 200px;
  background-attachment: fixed;
}

